notify field
