# src/main/resources/swagger.yaml
@@ -236,6 +236,41 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
   /v1/event/{event_id}/{attendee_email}:
+    get:
+      tags:
+        - event
+      summary: Get Attendee
+      operationId: getAttendee
+      parameters:
+        - name: event_id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: attendee_email
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Attendee'
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        default:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
     put:
       tags:
         - event
@@ -318,6 +353,48 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /v1/event/{event_id}/{attendee_email}/notification:
+    put:
+      tags:
+        - event
+      summary: Update attendee notification
+      operationId: updateAttendeeNotification
+      description: |-
+        Updates the attendee notification for the given event. The attendee must be an attendee of 
+        the event.
+      parameters:
+        - name: event_id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: attendee_email
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: boolean
+      responses:
+        204:
+          description: OK
+          content:
+            { }
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        default:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
     ErrorResponse:
@@ -373,6 +450,8 @@ components:
           type: string
         email:
           type: string
+        notify:
+          type: boolean
         attendee_availabilities:
           type: array
           items:
